# docs/swagger.yaml
@@ -67,12 +67,14 @@ definitions:
         type: integer
       password:
         type: string
+      role:
+        type: string
       updated_at:
         type: string
       username:
         type: string
     type: object
-host: localhost:8080
+host: final-project-mygram-production.up.railway.app
 info:
   contact:
     email: rico@gmail.com
@@ -90,7 +92,7 @@ paths:
       parameters:
       - description: Login User
         in: body
-        name: models.User
+        name: User
         required: true
         schema:
           $ref: '#/definitions/models.User'
@@ -112,7 +114,7 @@ paths:
       parameters:
       - description: Register User
         in: body
-        name: models.User
+        name: User
         required: true
         schema:
           $ref: '#/definitions/models.User'
